--- a/src/config/version.h.in
+++ b/src/config/version.h.in
@@ -2,12 +2,12 @@
 #define STR(x) STR_HELPER(x)
 
 #define PROJECT_NAME "NinjaCoin"
-#define PROJECT_SITE "http://www.ninjacoin.org"
+#define PROJECT_SITE "https://www.ninjacoin.org"
 #define PROJECT_COPYRIGHT "Copyright 2019-2020, The NinjaCoin Developers"
 #define APP_VER_MAJOR 2
-#define APP_VER_MINOR 0
+#define APP_VER_MINOR 1
 #define APP_VER_REV 0
-#define APP_VER_BUILD 200
+#define APP_VER_BUILD 1000
 
 #define BUILD_COMMIT_ID "@VERSION@"
 #define PROJECT_VERSION STR(APP_VER_MAJOR) "." STR(APP_VER_MINOR) "." STR(APP_VER_REV)
